Dependency overhaul (#926)
* build(plugins): Restructure pom.xml and bump plugin versions

* fix(test): Replace JMockit with Mockito

* build(deps): Replace deprecated javax.xml.bind with jakarta.xml.bind

* fix(xml): Ensure XML line separators match the current systems line separators

* doc(javadoc): Various JavaDoc fixes

* build(deps): Supersede hamcrest-all dependency

* build(deps): Remove unused assertj-core and asm dependencies

* build(deps): Bump dependency versions (excluding Bouncy Castle)

* build: Clean apps folder before building modules

* build(deps): Make dependencies explicit

* fix: Unified file resource management

* test(junit5): TLS-Core JUnit 5 migration

* build: Do not inherit clean plugin configuration to modules

* build: Avoid accidental exclusion of runtime dependencies

* build(deps): Bump JUnit and Log4J versions to latest

* tests: Tag ConfigSchemaGeneratorTest as integration tests

* fix(jaxb): Missing bind of some fields of the TokenBindingExtensionMessage class

* test: Remove duplicate assertions for executedAsPlanned

* feat: Remove UnlimitedStrengthEnabler altogether

* test: Remove placeholder and reduce TlsRecordLayerIT iterations

* test: Fix Javadoc and remove unnecessary overrides

* build(deps): Bump Log4j to 2.19.0

* build(deps): Bump Mockito to 4.8.0

* build(plugins): Bump plugin versions to latest

Co-authored-by: mmaehren <32199075+mmaehren@users.noreply.github.com>