@@ -10,58 +10,31 @@
 package de.rub.nds.tlsattacker.core.protocol.parser;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.HandshakeMessageType;
 import de.rub.nds.tlsattacker.core.constants.ProtocolVersion;
 import de.rub.nds.tlsattacker.core.protocol.message.CertificateRequestMessage;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
+import java.util.stream.Stream;
 
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertTrue;
+public class CertificateRequestTls13ParserTest
+    extends AbstractHandshakeMessageParserTest<CertificateRequestMessage, CertificateRequestParser> {
 
-@RunWith(Parameterized.class)
-public class CertificateRequestTls13ParserTest {
-
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ArrayConverter.hexStringToByteArray("0d00000401020000"), HandshakeMessageType.CERTIFICATE_REQUEST, 1,
-                ArrayConverter.hexStringToByteArray("02"), 0, new byte[0], ProtocolVersion.TLS13 } });
+    public CertificateRequestTls13ParserTest() {
+        super(CertificateRequestParser::new, List.of(
+            Named.of("CertificateRequestMessage::getCertificateRequestContextLength",
+                CertificateRequestMessage::getCertificateRequestContextLength),
+            Named.of("CertificateRequestMessage::getCertificateRequestContext",
+                CertificateRequestMessage::getCertificateRequestContext),
+            Named.of("CertificateRequestMessage::getExtensionsLength", CertificateRequestMessage::getExtensionsLength),
+            Named.of("CertificateRequestMessage::getExtensionBytes", CertificateRequestMessage::getExtensionBytes)));
     }
 
-    private byte[] message;
-    private HandshakeMessageType type;
-    private int certificateRequestContextLength;
-    private byte[] certificateRequestContext;
-    private int extensionLength;
-    private byte[] extensionBytes;
-    private ProtocolVersion version;
-
-    public CertificateRequestTls13ParserTest(byte[] message, HandshakeMessageType type,
-        int certificateRequestContextLength, byte[] certificateRequestContext, int extensionLength,
-        byte[] extensionBytes, ProtocolVersion version) {
-        this.message = message;
-        this.type = type;
-        this.certificateRequestContextLength = certificateRequestContextLength;
-        this.certificateRequestContext = certificateRequestContext;
-        this.extensionLength = extensionLength;
-        this.extensionBytes = extensionBytes;
-        this.version = version;
-    }
-
-    @Test
-    public void testParse() {
-        CertificateRequestParser parser = new CertificateRequestParser(0, message, version, Config.createConfig());
-        CertificateRequestMessage msg = parser.parse();
-        assertArrayEquals(message, msg.getCompleteResultingMessage().getValue());
-        assertTrue(msg.getCertificateRequestContextLength().getValue() == certificateRequestContextLength);
-        assertArrayEquals(msg.getCertificateRequestContext().getValue(), certificateRequestContext);
-        assertTrue(msg.getExtensionsLength().getValue() == extensionLength);
-        assertArrayEquals(msg.getExtensionBytes().getValue(), extensionBytes);
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ProtocolVersion.TLS13, ArrayConverter.hexStringToByteArray("0d00000401020000"),
+            List.of(HandshakeMessageType.CERTIFICATE_REQUEST.getValue(), 4, 1,
+                ArrayConverter.hexStringToByteArray("02"), 0, new byte[0])));
     }
 }
