@@ -10,60 +10,31 @@
 package de.rub.nds.tlsattacker.core.protocol.parser;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.HandshakeMessageType;
 import de.rub.nds.tlsattacker.core.constants.ProtocolVersion;
 import de.rub.nds.tlsattacker.core.protocol.message.HelloVerifyRequestMessage;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.*;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class HelloVerifyRequestParserTest {
+import java.util.List;
+import java.util.stream.Stream;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ArrayConverter.hexStringToByteArray("03000017feff1415520276466763250a851c5b9eaeb44676ff3381"),
-                HandshakeMessageType.HELLO_VERIFY_REQUEST, 23, ProtocolVersion.DTLS10.getValue(), (byte) 20,
-                ArrayConverter.hexStringToByteArray("15520276466763250a851c5b9eaeb44676ff3381") } });
+public class HelloVerifyRequestParserTest
+    extends AbstractHandshakeMessageParserTest<HelloVerifyRequestMessage, HelloVerifyRequestParser> {
+
+    public HelloVerifyRequestParserTest() {
+        super(HelloVerifyRequestParser::new,
+            List.of(
+                Named.of("HelloVerifyRequestMessage::getProtocolVersion",
+                    HelloVerifyRequestMessage::getProtocolVersion),
+                Named.of("HelloVerifyRequestMessage::getCookieLength", HelloVerifyRequestMessage::getCookieLength),
+                Named.of("HelloVerifyRequestMessage::getCookie", HelloVerifyRequestMessage::getCookie)));
     }
 
-    private final byte[] message;
-
-    private final HandshakeMessageType type;
-    private final int length;
-
-    private final byte[] protocolVersion;
-    private final byte cookieLength;
-    private final byte[] cookie;
-    private final Config config = Config.createConfig();
-
-    public HelloVerifyRequestParserTest(byte[] message, HandshakeMessageType type, int length, byte[] protocolVersion,
-        byte cookieLength, byte[] cookie) {
-        this.message = message;
-        this.type = type;
-        this.length = length;
-        this.protocolVersion = protocolVersion;
-        this.cookieLength = cookieLength;
-        this.cookie = cookie;
-    }
-
-    /**
-     * Test of parse method, of class HelloVerifyRequestParser.
-     */
-    @Test
-    public void testParse() {
-        HelloVerifyRequestParser parser = new HelloVerifyRequestParser(0, message, ProtocolVersion.DTLS10, config);
-        HelloVerifyRequestMessage msg = parser.parse();
-        assertArrayEquals(message, msg.getCompleteResultingMessage().getValue());
-        assertTrue(msg.getLength().getValue() == length);
-        assertTrue(msg.getType().getValue() == type.getValue());
-        assertArrayEquals(protocolVersion, msg.getProtocolVersion().getValue());
-        assertArrayEquals(cookie, msg.getCookie().getValue());
-        assertTrue(cookieLength == msg.getCookieLength().getValue());
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ProtocolVersion.DTLS10,
+            ArrayConverter.hexStringToByteArray("03000017feff1415520276466763250a851c5b9eaeb44676ff3381"),
+            List.of(HandshakeMessageType.HELLO_VERIFY_REQUEST.getValue(), 23, ProtocolVersion.DTLS10.getValue(),
+                (byte) 20, ArrayConverter.hexStringToByteArray("15520276466763250a851c5b9eaeb44676ff3381"))));
     }
 }
