@@ -10,58 +10,28 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.AlpnExtensionMessage;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.*;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class AlpnExtensionParserTest {
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ExtensionType.ALPN, ArrayConverter.hexStringToByteArray("0010000e000c02683208687474702f312e31"), 14, 0,
-                12, ArrayConverter.hexStringToByteArray("02683208687474702f312e31") } });
+import java.util.List;
+import java.util.stream.Stream;
+
+public class AlpnExtensionParserTest extends AbstractExtensionParserTest<AlpnExtensionMessage, AlpnExtensionParser> {
+
+    public AlpnExtensionParserTest() {
+        super(AlpnExtensionParser::new,
+            List.of(
+                Named.of("AlpnExtensionMessage::getProposedAlpnProtocolsLength",
+                    AlpnExtensionMessage::getProposedAlpnProtocolsLength),
+                Named.of("AlpnExtensionMessage::getProposedAlpnProtocols",
+                    AlpnExtensionMessage::getProposedAlpnProtocols)));
     }
 
-    private final ExtensionType extensionType;
-    private final byte[] expectedBytes;
-    private final int extensionLength;
-    private final int startParsing;
-    private final int proposedAlpnProtocolsLength;
-    private final byte[] proposedAlpnProtocols;
-    private AlpnExtensionParser parser;
-    private AlpnExtensionMessage message;
-
-    public AlpnExtensionParserTest(ExtensionType extensionType, byte[] expectedBytes, int extensionLength,
-        int startParsing, int alpnExtensionLength, byte[] alpnAnnouncedProtocols) {
-        this.extensionType = extensionType;
-        this.expectedBytes = expectedBytes;
-        this.extensionLength = extensionLength;
-        this.startParsing = startParsing;
-        this.proposedAlpnProtocolsLength = alpnExtensionLength;
-        this.proposedAlpnProtocols = alpnAnnouncedProtocols;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream
+            .of(Arguments.of(ArrayConverter.hexStringToByteArray("0010000e000c02683208687474702f312e31"), List.of(),
+                ExtensionType.ALPN, 14, List.of(12, ArrayConverter.hexStringToByteArray("02683208687474702f312e31"))));
     }
-
-    @Before
-    public void setUp() {
-        parser = new AlpnExtensionParser(startParsing, expectedBytes, Config.createConfig());
-    }
-
-    @Test
-    public void testParseExtensionMessageContent() {
-        message = parser.parse();
-        assertArrayEquals(extensionType.getValue(), message.getExtensionType().getValue());
-        assertEquals(extensionLength, (long) message.getExtensionLength().getValue());
-
-        assertEquals(proposedAlpnProtocolsLength, (long) message.getProposedAlpnProtocolsLength().getValue());
-        assertArrayEquals(proposedAlpnProtocols, message.getProposedAlpnProtocols().getValue());
-    }
-
 }
