@@ -10,74 +10,38 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.CertificateType;
 import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.ClientCertificateTypeExtensionMessage;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
+
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import java.util.stream.Stream;
 
-@RunWith(Parameterized.class)
-public class ClientCertificateTypeExtensionParserTest {
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ExtensionType.CLIENT_CERTIFICATE_TYPE, ArrayConverter.hexStringToByteArray("0013000100"), 1, 0, null,
-                Arrays.asList(CertificateType.X509), false },
-            { ExtensionType.CLIENT_CERTIFICATE_TYPE, ArrayConverter.hexStringToByteArray("001300020100"), 2, 0, 1,
-                Arrays.asList(CertificateType.X509), true },
-            { ExtensionType.CLIENT_CERTIFICATE_TYPE, ArrayConverter.hexStringToByteArray("00130003020100"), 3, 0, 2,
-                Arrays.asList(CertificateType.OPEN_PGP, CertificateType.X509), true } });
+public class ClientCertificateTypeExtensionParserTest
+    extends AbstractExtensionParserTest<ClientCertificateTypeExtensionMessage, ClientCertificateTypeExtensionParser> {
+
+    public ClientCertificateTypeExtensionParserTest() {
+        super(ClientCertificateTypeExtensionParser::new,
+            List.of(
+                Named.of("ClientCertificateTypeExtensionMessage::getCertificateTypesLength",
+                    ClientCertificateTypeExtensionMessage::getCertificateTypesLength),
+                Named.of("ClientCertificateTypeExtensionMessage::getCertificateTypes",
+                    ClientCertificateTypeExtensionMessage::getCertificateTypes)));
     }
 
-    private final ExtensionType extensionType;
-    private final byte[] expectedBytes;
-    private final int extensionLength;
-    private final int startParsing;
-    private final Integer certificateTypesLength;
-    private final List<CertificateType> certificateTypes;
-    private final boolean isClientState;
-    private ClientCertificateTypeExtensionParser parser;
-    private ClientCertificateTypeExtensionMessage msg;
-
-    public ClientCertificateTypeExtensionParserTest(ExtensionType extensionType, byte[] expectedBytes,
-        int extensionLength, int startParsing, Integer certificateTypesLength, List<CertificateType> certificateTypes,
-        boolean isClientState) {
-        this.extensionType = extensionType;
-        this.expectedBytes = expectedBytes;
-        this.extensionLength = extensionLength;
-        this.startParsing = startParsing;
-        this.certificateTypesLength = certificateTypesLength;
-        this.certificateTypes = certificateTypes;
-        this.isClientState = isClientState;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(
+            Arguments.of(ArrayConverter.hexStringToByteArray("0013000100"), List.of(),
+                ExtensionType.CLIENT_CERTIFICATE_TYPE, 1,
+                Arrays.asList(null, CertificateType.toByteArray(List.of(CertificateType.X509)), false)),
+            Arguments.of(ArrayConverter.hexStringToByteArray("001300020100"), List.of(),
+                ExtensionType.CLIENT_CERTIFICATE_TYPE, 2,
+                Arrays.asList(1, CertificateType.toByteArray(List.of(CertificateType.X509)), true)),
+            Arguments.of(ArrayConverter.hexStringToByteArray("00130003020100"), List.of(),
+                ExtensionType.CLIENT_CERTIFICATE_TYPE, 3, Arrays.asList(2,
+                    CertificateType.toByteArray(List.of(CertificateType.OPEN_PGP, CertificateType.X509)), true)));
     }
-
-    @Before
-    public void setUp() {
-        parser = new ClientCertificateTypeExtensionParser(startParsing, expectedBytes, Config.createConfig());
-    }
-
-    @Test
-    public void testParseExtensionMessageContent() {
-        msg = parser.parse();
-
-        assertArrayEquals(extensionType.getValue(), msg.getExtensionType().getValue());
-        assertEquals(extensionLength, (long) msg.getExtensionLength().getValue());
-
-        if (certificateTypesLength != null) {
-            assertEquals(certificateTypesLength, msg.getCertificateTypesLength().getValue());
-        } else {
-            assertNull(msg.getCertificateTypesLength());
-        }
-        assertArrayEquals(CertificateType.toByteArray(certificateTypes), msg.getCertificateTypes().getValue());
-    }
-
 }
