@@ -10,59 +10,24 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.GreaseExtensionMessage;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
+import java.util.stream.Stream;
 
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertTrue;
+public class GreaseExtensionParserTest
+    extends AbstractExtensionParserTest<GreaseExtensionMessage, GreaseExtensionParser> {
 
-@RunWith(Parameterized.class)
-public class GreaseExtensionParserTest {
-
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] { { ArrayConverter.hexStringToByteArray("1a1a000a0102030405060708090a"), 0,
-            ArrayConverter.hexStringToByteArray("1a1a000a0102030405060708090a"), ExtensionType.GREASE_01, 10,
-            new byte[] { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 } } });
+    public GreaseExtensionParserTest() {
+        super(GreaseExtensionParser::new,
+            List.of(Named.of("GreaseExtensionMessage::getData", GreaseExtensionMessage::getData)));
     }
 
-    private final byte[] extension;
-    private final int start;
-    private final byte[] completeExtension;
-    private final ExtensionType type;
-    private final int extensionLength;
-    private final byte[] randomData;
-
-    public GreaseExtensionParserTest(byte[] extension, int start, byte[] completeExtension, ExtensionType type,
-        int extensionLength, byte[] randomData) {
-        this.extension = extension;
-        this.start = start;
-        this.completeExtension = completeExtension;
-        this.type = type;
-        this.extensionLength = extensionLength;
-        this.randomData = randomData;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ArrayConverter.hexStringToByteArray("1a1a000a0102030405060708090a"), List.of(),
+            ExtensionType.GREASE_01, 10, List.of(new byte[] { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 })));
     }
-
-    /**
-     * Test of parseExtensionMessageContent method, of class HeartbeatExtensionParser.
-     */
-    @Test
-    public void testParseExtensionMessageContent() {
-        GreaseExtensionParser parser = new GreaseExtensionParser(start, extension, Config.createConfig());
-        GreaseExtensionMessage msg = parser.parse();
-        assertArrayEquals(msg.getExtensionBytes().getValue(), completeExtension);
-        assertArrayEquals(type.getValue(), msg.getExtensionType().getValue());
-        assertArrayEquals(type.getValue(), msg.getType().getValue());
-        assertTrue(extensionLength == msg.getExtensionLength().getValue());
-        assertArrayEquals(randomData, msg.getRandomData().getValue());
-        assertArrayEquals(randomData, msg.getData());
-    }
-
 }
