@@ -10,77 +10,25 @@
 package de.rub.nds.tlsattacker.core.protocol.parser.extension;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.ExtensionType;
 import de.rub.nds.tlsattacker.core.protocol.message.extension.SessionTicketTLSExtensionMessage;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class SessionTicketTLSExtensionParserTest {
-    /**
-     * Gets the test vectors of the SessionTicketTLSExtensionHandlerTest class.
-     *
-     * @return Collection of the parameters
-     */
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ExtensionType.SESSION_TICKET, 0, new byte[0], ArrayConverter.hexStringToByteArray("00230000"), 0 } });
+import java.util.List;
+import java.util.stream.Stream;
+
+public class SessionTicketTLSExtensionParserTest
+    extends AbstractExtensionParserTest<SessionTicketTLSExtensionMessage, SessionTicketTLSExtensionParser> {
+
+    public SessionTicketTLSExtensionParserTest() {
+        super(SessionTicketTLSExtensionParser::new,
+            List.of(Named.of("SessionTicketTLSExtensionMessage::getSessionTicket::getIdentity",
+                msg -> msg.getSessionTicket().getIdentity())));
     }
 
-    private final ExtensionType extensionType;
-    private final int extensionLength;
-    private final byte[] sessionTicket;
-    private final byte[] expectedBytes;
-    private final int startParsing;
-    private SessionTicketTLSExtensionParser parser;
-    private SessionTicketTLSExtensionMessage message;
-
-    /**
-     * Constructor for parameterized setup.
-     *
-     * @param extensionType
-     * @param extensionLength
-     * @param sessionTicket
-     * @param expectedBytes
-     * @param startParsing
-     */
-    public SessionTicketTLSExtensionParserTest(ExtensionType extensionType, int extensionLength, byte[] sessionTicket,
-        byte[] expectedBytes, int startParsing) {
-        this.extensionType = extensionType;
-        this.extensionLength = extensionLength;
-        this.sessionTicket = sessionTicket;
-        this.expectedBytes = expectedBytes;
-        this.startParsing = startParsing;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(Arguments.of(ArrayConverter.hexStringToByteArray("00230000"), List.of(),
+            ExtensionType.SESSION_TICKET, 0, List.of(new byte[0])));
     }
-
-    /**
-     * Some initial setup.
-     */
-    @Before
-    public void setUp() {
-        parser = new SessionTicketTLSExtensionParser(startParsing, expectedBytes, Config.createConfig());
-        message = new SessionTicketTLSExtensionMessage();
-    }
-
-    /**
-     * Tests the parseExtensionMessageContent method of the SessionTicketTLSExtensionParser.
-     */
-
-    @Test
-    public void testParseExtensionMessageContent() {
-        message = parser.parse();
-
-        assertArrayEquals(ExtensionType.SESSION_TICKET.getValue(), message.getExtensionType().getValue());
-        assertEquals(extensionLength, (long) message.getExtensionLength().getValue());
-        assertArrayEquals(sessionTicket, message.getSessionTicket().getIdentity().getValue());
-    }
-
 }
